# lbpSSH

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md  analysis_options.yaml  codemagic.yaml  package-lock.json  package.json  pubspec.yaml  stress_test.sh
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: changelog.yml  ci.yml  release-drafter.yml
dioxus/: Cargo.toml  README.md
dioxus/src/: app.rs  main.rs
dioxus/src/components/: connection_form.rs  connection_list.rs  import_export.rs  mod.rs  search.rs  terminal.css  terminal_settings.rs
dioxus/src/models/: config.rs  connection.rs  mod.rs
dioxus/src/ssh/: mod.rs  session.rs  sync_service.rs
dioxus/src/utils/: import_export.rs  sync.rs
docs/plans/: 2026-02-21-error-dialog-design.md  2026-02-21-error-dialog-implementation.md  2026-02-21-kitty-file-transfer-design.md  2026-02-21-kitty-file-transfer-implementation.md  2026-02-21-sftp-browser-design.md  2026-02-21-sftp-browser-implementation.md  2026-02-22-collapsible-sidebar-design.md  2026-02-22-collapsible-sidebar-implementation.md  2026-02-22-kitty-file-transfer-replacement-design.md  2026-02-22-kitty-file-transfer-replacement-implementation.md  2026-02-22-kitty-integration-design.md  2026-02-22-kitty-integration-implementation.md  2026-02-23-kitty-complete-features-plan.md  2026-02-23-kitty-extra-features-plan.md  2026-02-23-kitty-full-features-design.md  2026-02-23-kitty-full-features-implementation.md  2026-02-23-terminal-drag-upload-design.md  2026-02-23-terminal-drag-upload-implementation.md  2026-02-24-sftp-ui-improvements-design.md  (+2 more)
integration_test/: app_test.dart
lib/: main.dart
lib/l10n/: app_en.arb  (+2 more)
linux/: CMakeLists.txt
src/: app.rs  main.rs
test/: widget_test.dart
tests/: ui_tests.rs
windows/: .gitignore  CMakeLists.txt
(+153 files in other folders)
