[package]
name = "lbpssh"
version = "0.1.0"
edition = "2021"
description = "A cross-platform SSH terminal manager"

[dependencies]
# Dioxus
dioxus = "0.7"
dioxus-desktop = "0.7"

# SSH
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }

# 状态管理
once_cell = "1.19"  # Kept for future use, currently using std::sync::OnceLock

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置存储
confy = "0.5"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
env_logger = "0.10"
log = "0.4"

# 跨平台路径
pathbuf = "1.0"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 错误处理
thiserror = "1"

# HTTP 客户端（用于同步）
reqwest = { version = "0.11", features = ["json"] }

# 文件选择器（用于导入导出）
rfd = "0.14"

# CSV 支持
csv = "1"

[dev-dependencies]
# 测试工具
insta = { version = "1.39", features = ["yaml"] }

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
